# yfinance-pl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/README/: ES.md  JA.md  KO.md  ZH.md
docs/source/: conf.py  index.rst
docs/source/_static/: language-switcher.json  switcher.json
docs/source/es/: conf.py  index.rst
docs/source/es/reference/: index.rst
docs/source/ja/: conf.py  index.rst
docs/source/ja/reference/: index.rst
docs/source/ko/: conf.py  index.rst
docs/source/ko/reference/: index.rst
docs/source/reference/: index.rst
docs/source/zh/: conf.py  index.rst
docs/source/zh/reference/: index.rst
examples/: 01_quick_start.py  02_history.py  03_company_info.py  04_dividends_splits.py  05_financials.py  06_holders.py  07_analysis.py  08_options.py
python/yfinance_pl/: __init__.py  __init__.pyi
src/: lib.rs
